--- a/carpool/templates/includes/price.html
+++ b/carpool/templates/includes/price.html
@@ -61,7 +61,7 @@ html {
 	            <span class="price"><sup>$</sup> <span class="number">30.50</span></span>
 	            
 	            <div class="pricing-text">
-	              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+	              <p>kk Duden flows by their place and supplies it with the necessary regelialia.</p>
 	            </div>
 
 	            <a href="login" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
