Added car list in db

--- a/carpool/templates/bindex.html
+++ b/carpool/templates/bindex.html
@@ -59,15 +59,15 @@
 
    	{% include 'includes/bprice.html' %}
 
-	{% include 'includes/experience.html'%}
+	  {% include 'includes/experience.html'%}
 
-	{% include 'includes/gallery.html' %}
+   	{% include 'includes/gallery.html' %}
 
     {% include 'includes/projects.html' %}
 
-	{% include 'includes/blog.html' %}
+	  {% include 'includes/blog.html' %}
    
-    {% include 'includes/footer.html' %}
+    {% include 'includes/footerl.html' %}
   
 
   <!-- loader -->
