--- a/carpool/templates/includes/book.html
+++ b/carpool/templates/includes/book.html
@@ -73,7 +73,7 @@ html {
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-			              <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Message" required></textarea>
+			              <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Message (Instructions)" required></textarea>
 			            </div>
 								</div>
 								<div class="col-md-12">
