--- a/carpool/templates/includes/projects.html
+++ b/carpool/templates/includes/projects.html
@@ -3,65 +3,118 @@
 				<div class="row justify-content-center pb-5 mb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
           	<span class="subheading">Projects</span>
-            <h2>Done Projects</h2>
+            <h2>Projects Done</h2>
           </div>
         </div>
 			</div>
 			<div class="container-fluid px-md-0">
 				<div class="row no-gutters">
           <div class="col-md-3 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-1.jpg);">
-            	<a href="images/work-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(static/images/1.jfif);">
+            	<a href="static/images/1.jfif" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
-	              	<span>Engine</span>
-	              	<h2><a href="work-single.html">Engine Testing Complated</a></h2>
+	              	<span>Car wash</span>
+	              	<h2><a href="#">INTERIOR WASHING</a></h2>
 	              </div>
               </div>
             </div>
           </div>
           <div class="col-md-3 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-2.jpg);">
-            	<a href="images/work-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(static/images/2.jfif);">
+            	<a href="static/images/2.jfif" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
-	              	<span>Oil Change</span>
-	              	<h2><a href="work-single.html">Change Oil Completed</a></h2>
+	              	<span>Car wash</span>
+	              	<h2><a href="#">EXTERIOR WASHING</a></h2>
 	              </div>
               </div>
             </div>
           </div>
           <div class="col-md-3 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-3.jpg);">
-            	<a href="images/work-3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(static/images/3.jfif);">
+            	<a href="static/images/3.jfif" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
-	              	<span>Engine</span>
-	              	<h2><a href="work-single.html">Engine Diagnostics</a></h2>
+	              	<span>Car Wash</span>
+	              	<h2><a href="#">COMPLETE SUPERIOR WASHING</a></h2>
+	              </div>
+              </div>
+            </div>
+          </div>
+
+		  <div class="col-md-3 ftco-animate">
+            <div class="work img d-flex align-items-end" style="background-image: url(static/images/3.jfif);">
+            	<a href="static/images/3.jfif" class="icon image-popup d-flex justify-content-center align-items-center">
+	    					<span class="fa fa-expand"></span>
+	    				</a>
+            	<div class="desc w-100 px-4">
+	              <div class="text w-100 mb-3">
+	              	<span>Bike Wash</span>
+	              	<h2><a href="#">COMPLETE BIKE WASHING</a></h2>
 	              </div>
               </div>
             </div>
           </div>
 
           <div class="col-md-3 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-4.jpg);">
-            	<a href="images/work-4.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(static/images/4.jfif);">
+            	<a href="static/images/4.jfif" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
-	              	<span>Tire</span>
-	              	<h2><a href="work-single.html">Tire Change</a></h2>
+	              	<span>DETAILING</span>
+	              	<h2><a href="#">INTERIOR DETAILING</a></h2>
+	              </div>
+              </div>
+            </div>
+          </div>
+		         <div class="col-md-3 ftco-animate">
+            <div class="work img d-flex align-items-end" style="background-image: url(static/images/4.jfif);">
+            	<a href="static/images/4.jfif" class="icon image-popup d-flex justify-content-center align-items-center">
+	    					<span class="fa fa-expand"></span>
+	    				</a>
+            	<div class="desc w-100 px-4">
+	              <div class="text w-100 mb-3">
+	              	<span>DETAILING</span>
+	              	<h2><a href="#">EXTERIOR DETAILING</a></h2>
+	              </div>
+              </div>
+            </div>
+          </div>
+		           <div class="col-md-3 ftco-animate">
+            <div class="work img d-flex align-items-end" style="background-image: url(static/images/4.jfif);">
+            	<a href="static/images/4.jfif" class="icon image-popup d-flex justify-content-center align-items-center">
+	    					<span class="fa fa-expand"></span>
+	    				</a>
+            	<div class="desc w-100 px-4">
+	              <div class="text w-100 mb-3">
+	              	<span>DETAILING</span>
+	              	<h2><a href="#">VINYL FLOORING</a></h2>
+	              </div>
+              </div>
+            </div>
+          </div>
+		           <div class="col-md-3 ftco-animate">
+            <div class="work img d-flex align-items-end" style="background-image: url(static/images/4.jfif);">
+            	<a href="static/images/4.jfif" class="icon image-popup d-flex justify-content-center align-items-center">
+	    					<span class="fa fa-expand"></span>
+	    				</a>
+            	<div class="desc w-100 px-4">
+	              <div class="text w-100 mb-3">
+	              	<span>DETAILING</span>
+	              	<h2><a href="#">SEAT COVER</a></h2>
 	              </div>
               </div>
             </div>
           </div>
         </div>
-			</div>
-		</section>	
+	</div>
+		</section>	<br><br>
