--- a/carpool/templates/index.html
+++ b/carpool/templates/index.html
@@ -38,7 +38,7 @@ html {
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="fa fa-bars"></span> Menu
 	      </button>
-				<form action="#" class="searchform order-lg-last">
+				<form action="" class="searchform order-lg-last">
           <div class="form-group d-flex">
             <input type="text" class="form-control pl-3" placeholder="Search">
             <button type="submit" placeholder="" class="form-control search"><span class="fa fa-search"></span></button>
@@ -72,7 +72,7 @@ html {
 
     {% include 'includes/projects.html' %}
     
-    {% include 'includes/blog.html' %}
+    <!--{% include 'includes/blog.html' %}-->
   
     {% include 'includes/footer.html' %}
   
