added price page

--- a/carpool/templates/includes/book.html
+++ b/carpool/templates/includes/book.html
@@ -42,8 +42,7 @@ html {
 	                      <div class="icon"><span class="fa fa-chevron-down"></span></div>
 	                      <select name="service" id="service" class="form-control" required>
                           <option value="">Select service </option>
-	                      	<option value="INTERIOR WASH">INTERIOR WASH</option>
-	                        <option value="EXTERIOR WASH">EXTERIOR WASH</option>
+	                      	<option value="INTERIOR + EXTERIOR WASH">INTERIOR WASH</option>
 	                        <option value="COMPLETE SUPERIOR WASH">COMPLETE SUPERIOR WASH</option>
 	                        <option value="REMOVING HARD WATER STAIN">REMOVING HARD WATER STAIN</option>
 	                        <option value="INTERIOR DETAILING">INTERIOR DETAILING</option>
