--- a/carpool/templates/includes/price.html
+++ b/carpool/templates/includes/price.html
@@ -12,62 +12,199 @@ html {
           </div>
         </div>
     		<div class="row">
+			<div class="col-md-6 col-lg-3 ftco-animate">
+	          <div class="block-7">
+			   <div class="icon d-flex justify-content-center align-items-left">
+            		<span > <img src="static/images/hbb1.png" height="100px" width="150px"></img></span>
+              </div>
+	            <div >
+            	<span class="excerpt d-block text-center">HATCHBACK</span>
+				<br>
+				<div class="pricing-text">
+	         
+	     		<p class="price" >INTERIOR+EXTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">370</a></b></b></p>
+				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">350</a></b></b></p>
+				<p class="price">REMOVING WATER STAIN <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">2000</a></b></b></p>
+				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">3300</a></b></b></p>
+	            </div>
+
+	            <a href="#section1" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+	            </div>
+	          </div>
+	        </div>
     			<div class="col-md-6 col-lg-3 ftco-animate">
 	          <div class="block-7">
-	            <div class="text-center">
-            	<span class="excerpt d-block">First PMS</span>
-	            <span class="price"><sup>$</sup> <span class="number">78.98</span></span>
+			  <div class="icon d-flex justify-content-center align-items-left">
+            		<span > <img src="static/images/sedann.png" height="100px" width="150px"></img></span>
+              </div>
+	            <div >
+            	<span class="excerpt d-block text-center">SEDAN</span>
+	           <br>
+				<div class="pricing-text">
+	         
+				<p class="price" >INTERIOR+EXTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">370</a></b></b></p>
+				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">400</a></b></b></p>
+				<p class="price">REMOVING WATER STAIN <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">2500</a></b></b></p>
+				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">3500</a></b></b></p>
+
 	            
-	            <div class="pricing-text">
-	              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+	            </div>
+	          <a href="#section1" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+	            </div>
+	          </div>
+	        </div>
+	        
+	        <div class="col-md-6 col-lg-3 ftco-animate">
+	          <div class="block-7">
+			  <div class="icon d-flex justify-content-center align-items-left">
+            		<span > <img src="static/images/msuv.png" height="100px" width="150px"></img></span>
+              </div>
+	            <div >
+            	<span class="excerpt d-block text-center">COMPACT SUV</span>
+	             <br>
+				<div class="pricing-text">
+	         
+	            <p class="price" >INTERIOR+EXTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">370</a></b></b></p>
+				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">430</a></b></b></p>
+				<p class="price">REMOVING WATER STAIN <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">3000</a></b></b></p>
+				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">3800</a></b></b></p>
 	            </div>
 
-	            <a href="login" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+	            <a href="#section1" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
 	            </div>
 	          </div>
 	        </div>
 	        <div class="col-md-6 col-lg-3 ftco-animate">
 	          <div class="block-7">
-	            <div class="text-center">
-            	<span class="excerpt d-block">Engine Diagnostics</span>
-	            <span class="price"><sup>$</sup> <span class="number">83.75</span></span>
+			  <div class="icon d-flex justify-content-center align-items-left">
+            		<span > <img src="static/images/suv.png" height="100px" width="150px"></img></span>
+              </div>
+	            <div >
+            	<span class="excerpt d-block text-center">SUV</span>
+	            <br>
+				<div class="pricing-text">
+	         
+	           <p class="price" >INTERIOR+EXTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">370</a></b></b></p>
+				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">350</a></b></b></p>
+				<p class="price">REMOVING WATER STAIN <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+
 	            
-	            <div class="pricing-text">
-	              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 	            </div>
 
-	            <a href="login" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+	           <a href="#section1" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+	            </div>
+	          </div>
+	        </div>
+			</div>
+				<div class="row justify-content-center pb-5 mb-3">
+          <div class="col-md-7 heading-section text-center ftco-animate">
+        	
+            <h2> Monthly subscriptions</h2>
+          </div>
+        </div>
+    		<div class="row">
+			<div class="col-md-6 col-lg-3 ftco-animate">
+	          <div class="block-7">
+			   <div class="icon d-flex justify-content-center align-items-left">
+            		<span > <img src="static/images/hbb1.png" height="100px" width="150px"></img></span>
+              </div>
+	            <div >
+            	<span class="excerpt d-block text-center">HATCHBACK</span>
+	             <br>
+				<div class="pricing-text">
+	         
+	            <p class="price" >INTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">EXTERIOR WASH<b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">REMOVING WATER STAIN <b >&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+
+	            
+	            </div>
+
+	           <a href="#section1" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+	            </div>
+	          </div>
+	        </div>
+    			<div class="col-md-6 col-lg-3 ftco-animate">
+	          <div class="block-7">
+			  <div class="icon d-flex justify-content-center align-items-left">
+            		<span > <img src="static/images/sedann.png" height="100px" width="150px"></img></span>
+              </div>
+	            <div >
+            	<span class="excerpt d-block text-center">SEDAN</span>
+	            <br>
+				<div class="pricing-text">
+	         
+	           <p class="price" >INTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">EXTERIOR WASH<b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">REMOVING WATER STAIN <b >&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+	            
+	            </div>
+
+	           <a href="#section1" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+	            </div>
+	          </div>
+	        </div>
+	        
+	        <div class="col-md-6 col-lg-3 ftco-animate">
+	          <div class="block-7">
+			  <div class="icon d-flex justify-content-center align-items-left">
+            		<span > <img src="static/images/msuv.png" height="100px" width="150px"></img></span>
+              </div>
+	            <div >
+            	<span class="excerpt d-block text-center">COMPACT SUV</span>
+	             <br>
+				<div class="pricing-text">
+	         
+	            <p class="price" >INTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">EXTERIOR WASH<b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">REMOVING WATER STAIN <b >&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+
+	            
+	            </div>				
+				<a href="#section1" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
 	            </div>
 	          </div>
 	        </div>
 	        <div class="col-md-6 col-lg-3 ftco-animate">
 	          <div class="block-7">
-	            <div class="text-center">
-            	<span class="excerpt d-block">Tow Truck</span>
-	            <span class="price"><sup>$</sup> <span class="number">85.00</span></span>
+			  <div class="icon d-flex justify-content-center align-items-left">
+            		<span > <img src="static/images/suv.png" height="100px" width="150px"></img></span>
+              </div>
+	            <div >
+            	<span class="excerpt d-block text-center">SUV</span>
+	             <br>
+				<div class="pricing-text">
+	         
+	           <p class="price" >INTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">EXTERIOR WASH<b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">REMOVING WATER STAIN <b >&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+
 	            
-	            <div class="pricing-text">
-	              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 	            </div>
 
-	            <a href="login" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+	            <a href="#section1" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
 	            </div>
 	          </div>
 	        </div>
-	        <div class="col-md-6 col-lg-3 ftco-animate">
-	          <div class="block-7">
-	            <div class="text-center">
-            	<span class="excerpt d-block">Car Wash</span>
-	            <span class="price"><sup>$</sup> <span class="number">30.50</span></span>
-	            
-	            <div class="pricing-text">
-	              <p>kk Duden flows by their place and supplies it with the necessary regelialia.</p>
-	            </div>
-
-	            <a href="login" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
-	            </div>
-	          </div>
-	        </div>
+				<div class="row justify-content-center pb-5 mb-3">
+          <div class="col-md-7 heading-section text-center ftco-animate">
 	      </div>
     	</div>
     </section>
